Parent type attributes for GenerateEcosFormComponent